# Shear

./: .gitignore  ACCOUNTS-EXPLAINED.md  ARCHITECTURE-PRESENTATION.md  Anchor.toml  BASE-VS-ER.md  Cargo.toml  DIAGRAM.md  MATH.md  PITCH-90s.md  PROGRAM.md  README.md  SCRIPT.md  SPIKE.md  USER-FLOW.md  build-guide.md  components.md  concept.md  edge-cases.md  frontend.md  instructions.md  lifecycle.md  magicblock-integration.md  naming.md  oracle.md  package-lock.json  package.json  state.md  tsconfig.json
.claude/skills/magicblock/: SKILL.md  cranks.md  delegation.md  lamports-topup.md  magic-actions.md  private-payments.md  resources.md  typescript-setup.md  vrf.md
.claude/skills/magicblock/agents/: openai.yaml
crates/shear-math/: Cargo.toml
crates/shear-math/src/: engine.rs  lib.rs
frontend/: .gitignore  docker-compose.yml  package-lock.json  package.json  tsconfig.json
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260613183013_new_migration/: migration.sql
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: chain-activity.tsx  chain-panel.tsx  collateral-dialog.tsx  common.tsx  event-feed.tsx  market-selector.tsx  motion.tsx  providers.tsx  ratio-chart.tsx  status-badges.tsx  tv-chart.tsx  tx-link.tsx  wallet-button.tsx
frontend/src/context/: market.tsx
frontend/src/lib/: chain-trade.ts  chain-write.ts  chain.ts  constants.ts  format.ts  market-engine.ts  profile.ts  pyth-history.ts  pyth.ts  session.ts  shear-math.ts  trade-log.ts  tv-datafeed.ts  use-chain-data.ts  use-chain-events.ts  use-liquidation-crank.ts  use-wallet-balances.ts  utils.ts
programs/mock-oracle/: Cargo.toml
programs/mock-oracle/src/: lib.rs
programs/shear/: Cargo.toml
programs/shear/src/: _spike_reference.rs.txt  constants.rs  engine_glue.rs  error.rs  events.rs  lib.rs  oracle.rs  state.rs  vendored_pyth.rs
programs/shear/src/instructions/: admin.rs  collateral.rs  funding.rs  liquidation.rs  liquidity.rs  mod.rs  session.rs  trade.rs
scripts/: _env.cjs  _shear.cjs  diagnose.cjs  recover-watch.cjs  relax-market.cjs  reset-trader.cjs  session-end.ts  session-start.cjs  session-start.ts  set-vol.cjs  setup.ts  test-lifecycle.cjs  test-multi.cjs  test-recover.cjs  test-session.cjs  test-settle-fix.cjs  test-topup.cjs  test-trade-fresh.cjs  test-trade.cjs  undelegate-pool.cjs
tests/: integration.ts  localnet.ts  scenarios.ts  shear-spike.ts
(+23 files in other folders)
