[package]
name = "mock-oracle"
version = "0.1.0"
edition = "2021"
description = "Test-only oracle that writes PriceUpdateV2 feed accounts for SHEAR localnet tests."

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
